# swc-private-assign-error

./: Cargo.toml  README.md
src/: main.rs
