[package]
name = "swc-private-assign-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_ast = { version = "0.107.1", features = ["rkyv-impl"] }
swc_ecma_parser = { version = "0.137.2" }
swc_common = { version = "0.31.17", features = ["concurrent", "sourcemap"] }
swc_ecma_visit = { version = "0.93.1" }
swc_ecma_codegen = { version = "0.142.2" }
swc_node_comments = { version = "0.18.17"}
swc_ecma_transforms = { version = "0.221.7", features = [
  "module",
  "typescript",
  "react",
  "concurrent",
] }
swc_ecma_utils = { version = "0.120.2" }
swc_atoms = { version = "0.5.7" }
swc_css_ast = "0.137.17"
swc_css_codegen = "0.147.20"
swc_css_modules = "0.25.22"
swc_css_parser = "0.146.20"
swc_css_visit = "0.136.17"
swc_css_compat = "0.23.20"
swc_css_prefixer = "0.149.22"
swc_css_minifier = "0.112.20"
swc_ecma_minifier = { version = "0.184.11", features = ["concurrent"] }
swc_error_reporters = "0.15.17"
swc_ecma_preset_env = "0.198.8"
serde_json = "1.0.107"
